Fix up the migrations, fixup spec, add d1 database connection
